--- a/index.html
+++ b/index.html
@@ -3,34 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>خانم دکتر سپیده آتشی - جراح پلاستیک</title>
+    <title>خانم دکتر سپیده آتشی - جراح بینی شیراز</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>خانم دکتر سپیده آتشی</h1>
-        <h2>جراح پلاستیک و زیبایی</h2>
+        <h2>جراح بینی شیراز | متخصص گوش، حلق و بینی</h2>
+        <p class="tagline">ما را انتخاب کن و تبدیل به ورژن جذاب‌تر خودت شو! ✨</p>
     </header>
 
     <section id="about">
-        <img src="assets/doctor-photo.jpg" alt="Dr. Sepideh Atashi">
-        <p>خانم دکتر سپیده آتشی متخصص گوش، حلق و بینی و جراح پلاستیک صورت با سال‌ها تجربه در زمینه زیبایی و جوانسازی.</p>
+        <img src="assets/dr-sepideh-atashi.jpg" alt="Dr. Sepideh Atashi">
+        <p>دکتر سپیده آتشی، متخصص گوش، حلق و بینی و جراح زیبایی با سال‌ها تجربه در زمینه زیبایی و جوانسازی، خدماتی بی‌نظیر را به شما ارائه می‌دهد.</p>
     </section>
 
     <section id="services">
-        <h2>خدمات ما</h2>
+        <h2>خدمات زیبایی</h2>
         <ul>
-            <li>جراحی زیبایی بینی</li>
+            <li>جراحی زیبایی بینی (رینوپلاستی)</li>
             <li>تزریق بوتاکس و فیلر</li>
             <li>لیفت صورت و گردن</li>
+            <li>اصلاح انحراف بینی</li>
+            <li>جراحی پلک (بلفاروپلاستی)</li>
         </ul>
     </section>
 
+    <section id="appointment">
+        <h2>ساعات حضور</h2>
+        <p>دکتر آتشی در روزهای <strong>یکشنبه</strong> و <strong>سه‌شنبه</strong> عصر در مطب حضور دارند.</p>
+    </section>
+
     <section id="contact">
-        <h2>تماس با ما</h2>
-        <p>برای مشاوره و تعیین وقت ملاقات با ما در تماس باشید.</p>
-        <p>ایمیل: <a href="mailto:dr.atashi@example.com">dr.atashi@example.com</a></p>
-        <p>تلفن: +98 912 345 6789</p>
+        <h2>تماس و آدرس</h2>
+        <p>📞 تلفن: <a href="tel:+989177500987">09177500987</a></p>
+        <p>📍 آدرس: معالی آباد، ساختمان آوا، واحد ۷۵</p>
+        <p>📷 اینستاگرام: <a href="https://www.instagram.com/dr.sepideh.atashi/" target="_blank">@dr.sepideh.atashi</a></p>
     </section>
 
     <footer>
