--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>خانم دکتر سپیده آتشی</h1>
+        <h1> دکتر سپیده آتشی</h1>
         <h2>جراح بینی شیراز | متخصص گوش، حلق و بینی</h2>
         <p class="tagline">ما را انتخاب کن و تبدیل به ورژن جذاب‌تر خودت شو! ✨</p>
     </header>
