--- a/index.html
+++ b/index.html
@@ -5,44 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> دکتر سپیده آتشی - جراح بینی شیراز</title>
     <link rel="stylesheet" href="styles.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
+
     <header>
         <h1> دکتر سپیده آتشی</h1>
         <h2>جراح بینی شیراز | متخصص گوش، حلق و بینی</h2>
         <p class="tagline">ما را انتخاب کن و تبدیل به ورژن جذاب‌تر خودت شو! ✨</p>
     </header>
 
-    <section id="about">
-        <img src="dr-sepideh-atashi.jpg" alt="Dr. Sepideh Atashi">
+    <section id="about" class="fade-in">
+        <img src="assets/dr-sepideh-atashi.jpg" alt="Dr. Sepideh Atashi">
         <p>دکتر سپیده آتشی، متخصص گوش، حلق و بینی و جراح زیبایی با سال‌ها تجربه در زمینه زیبایی و جوانسازی، خدماتی بی‌نظیر را به شما ارائه می‌دهد.</p>
     </section>
 
-    <section id="services">
+    <section id="services" class="fade-in">
         <h2>خدمات زیبایی</h2>
         <ul>
-            <li>جراحی زیبایی بینی (رینوپلاستی)</li>
-            <li>تزریق بوتاکس و فیلر</li>
-            <li>لیفت صورت و گردن</li>
-            <li>اصلاح انحراف بینی</li>
-            <li>جراحی پلک (بلفاروپلاستی)</li>
+            <li class="service-item">جراحی زیبایی بینی (رینوپلاستی)</li>
+            <li class="service-item">تزریق بوتاکس و فیلر</li>
+            <li class="service-item">لیفت صورت و گردن</li>
+            <li class="service-item">اصلاح انحراف بینی</li>
+            <li class="service-item">جراحی پلک (بلفاروپلاستی)</li>
         </ul>
     </section>
 
-    <section id="appointment">
+    <section id="appointment" class="fade-in">
         <h2>ساعات حضور</h2>
         <p>دکتر آتشی در روزهای <strong>یکشنبه</strong> و <strong>سه‌شنبه</strong> عصر در مطب حضور دارند.</p>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="fade-in">
         <h2>تماس و آدرس</h2>
         <p>📞 تلفن: <a href="tel:+989177500987">09177500987</a></p>
         <p>📍 آدرس: معالی آباد، ساختمان آوا، واحد ۷۵</p>
         <p>📷 اینستاگرام: <a href="https://www.instagram.com/dr.sepideh.atashi/" target="_blank">@dr.sepideh.atashi</a></p>
     </section>
 
+    <!-- Scroll to Top Button -->
+    <button id="scrollTopBtn">🔝</button>
+
     <footer>
         <p>© 2025 تمامی حقوق محفوظ است.</p>
     </footer>
+
 </body>
 </html>
