--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <section id="about" class="fade-in">
-        <img src="assets/dr-sepideh-atashi.jpg" alt="Dr. Sepideh Atashi">
+        <img src="dr-sepideh-atashi.jpg" alt="Dr. Sepideh Atashi">
         <p>دکتر سپیده آتشی، متخصص گوش، حلق و بینی و جراح زیبایی با سال‌ها تجربه در زمینه زیبایی و جوانسازی، خدماتی بی‌نظیر را به شما ارائه می‌دهد.</p>
     </section>
 
