--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>دکتر سپیده آتشی | جراح زیبایی بینی شیراز</title>
 
     <link rel="stylesheet" href="luxury.css">
-    <script defer src="luxury.js"></script>
+    <script defer src="script.js"></script>
 </head>
 
 <body>
