--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>دکتر سپیده آتشی | جراح زیبایی بینی شیراز</title>
 
-    <link rel="stylesheet" href="luxury.css">
+    <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
 
