--- a/index.html
+++ b/index.html
@@ -4,55 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>دکتر سپیده آتشی | جراح زیبایی بینی</title>
+    <title>دکتر سپیده آتشی | جراح زیبایی بینی و صورت</title>
 
-    <!-- Modern Persian Font -->
     <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@300;400;600;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
 </head>
 
 <body>
 
-    <!-- NAVBAR -->
+    <!-- NAV -->
     <nav id="navbar">
         <div class="nav-container">
 
             <div class="logo">دکتر سپیده آتشی</div>
 
-            <button class="menu-btn" id="menuToggle">≡</button>
+            <button class="menu-btn" id="menuToggle">☰</button>
 
             <ul class="nav-links" id="navMenu">
                 <li><a href="#about">معرفی</a></li>
                 <li><a href="#services">خدمات</a></li>
+                <li><a href="#otherservices">سایر خدمات</a></li>
                 <li><a href="#beforeafter">قبل و بعد</a></li>
                 <li><a href="#gallery">گالری</a></li>
                 <li><a href="#contact">تماس</a></li>
-
-                <!-- CTA visible ONLY on mobile inside menu -->
-                <li class="mobile-only">
-                    <a href="#consult" class="nav-cta">مشاوره آنلاین</a>
-                </li>
+                <li class="mobile-only"><a href="#consult" class="nav-cta">مشاوره آنلاین</a></li>
             </ul>
 
-            <!-- CTA visible ONLY on desktop -->
             <a href="#consult" class="nav-cta desktop-only">مشاوره آنلاین</a>
         </div>
     </nav>
 
-    <!-- HERO (Dynamic Background Slider) -->
+
+    <!-- HERO -->
     <header class="hero">
         <div class="hero-bg"></div>
-
         <div class="hero-content">
             <h1 class="hero-title">جراحی بینی طبیعی، متناسب با چهره شما ✨</h1>
             <p class="hero-subtitle">
-                تجربه‌ای متفاوت از زیبایی با خانم دکتر سپیده آتشی، متخصص گوش، حلق و بینی
+                زیبایی طبیعی، تنفس سالم و ظرافت هنری — با تکنیک‌های پیشرفته دکتر سپیده آتشی
             </p>
             <a href="#consult" class="hero-btn">درخواست مشاوره</a>
         </div>
     </header>
+
 
     <!-- ABOUT -->
     <section id="about" class="section fade">
@@ -62,25 +57,49 @@
             <img src="dr-sepideh-atashi.jpg" alt="دکتر سپیده آتشی">
 
             <p>
-                خانم دکتر سپیده آتشی، متخصص گوش، حلق و بینی و جراح زیبایی با سال‌ها تجربه در زمینه
-                جراحی بینی، اصلاح انحراف، جوانسازی و زیبایی صورت فعالیت می‌کنند.
+                دکتر سپیده آتشی، پزشک بدون سهمیه، متخصص گوش، حلق و بینی و جراح پلاستیک بینی و صورت،
+                دانش‌آموخته دانشگاه علوم پزشکی شیراز و دارای بورد تخصصی می‌باشند. 
+                ایشان متولد ۲۴ اسفند ۱۳۶۸ در شیراز هستند و در سال ۱۳۸۷ مدرک پزشکی عمومی خود را از دانشگاه علوم پزشکی شیراز دریافت کردند.
+
+                <br><br>
+                دکتر آتشی دوره تخصصی گوش، حلق و بینی را نیز در همان دانشگاه با موفقیت به پایان رسانده
+                و از سال ۱۳۹۵ فعالیت حرفه‌ای خود را در حیطه جراحی بینی و صورت، جراحی گوش و جراحی‌های سر و گردن آغاز کردند.
+
+                <br><br>
+                ایشان با سابقه حدود ۹ سال فعالیت تخصصی، علاوه بر رینوپلاستی، در
+                <strong>بلفاروپلاستی، لیفت شقیقه، اتوپلاستی</strong>
+                و تکنیک‌های پیشرفته جوانسازی چهره نیز تبحر ویژه دارند.
+                هدف دکتر آتشی ارائه نتایج طبیعی، ایمن و ماندگار متناسب با چهره هر زیباجو می‌باشد.
             </p>
         </div>
     </section>
 
-    <!-- SERVICES -->
+
+    <!-- MAIN SERVICES -->
     <section id="services" class="section fade">
-        <h2 class="section-title">خدمات زیبایی</h2>
+        <h2 class="section-title">خدمات تخصصی</h2>
 
         <div class="services-grid">
-            <div class="service-card">رینوپلاستی (جراحی بینی)</div>
-            <div class="service-card">تزریق بوتاکس</div>
-            <div class="service-card">فیلر و کانتور صورت</div>
-            <div class="service-card">لیفت صورت و گردن</div>
-            <div class="service-card">جراحی پلک</div>
-            <div class="service-card">اصلاح انحراف بینی</div>
+            <div class="service-card">رینوپلاستی (جراحی زیبایی بینی)</div>
+            <div class="service-card">اتوپلاستی (جراحی زیبایی گوش)</div>
+            <div class="service-card">بلفاروپلاستی (جراحی زیبایی پلک)</div>
         </div>
     </section>
+
+
+    <!-- OTHER SERVICES -->
+    <section id="otherservices" class="section fade">
+        <h2 class="section-title">سایر خدمات</h2>
+
+        <div class="services-grid">
+            <div class="service-card">تزریق بوتاکس، فیلر و جوانسازی</div>
+            <div class="service-card">درمان بیماری‌های گوش، حلق و بینی (کودکان و بزرگسالان)</div>
+            <div class="service-card">درمان و کنترل آلرژی و سینوزیت</div>
+            <div class="service-card">جراحی انحراف بینی</div>
+            <div class="service-card">جراحی لوزه</div>
+        </div>
+    </section>
+
 
     <!-- BEFORE/AFTER -->
     <section id="beforeafter" class="section fade">
@@ -88,11 +107,13 @@
         <div id="beforeafter-slider" class="ba-container"></div>
     </section>
 
+
     <!-- GALLERY -->
     <section id="gallery" class="section fade">
         <h2 class="section-title">گالری تصاویر</h2>
         <div id="gallery-grid" class="gallery-grid"></div>
     </section>
+
 
     <!-- CONTACT -->
     <section id="contact" class="section fade">
@@ -101,20 +122,25 @@
         <div class="contact-info">
             <p>📞 <a href="tel:+989177500987">0917-750-0987</a></p>
             <p>📍 معالی‌آباد، ساختمان آوا، واحد ۷۵</p>
-            <p>📷 <a href="https://www.instagram.com/dr.sepideh.atashi" target="_blank">اینستاگرام</a></p>
+            <p>📷 <a href="https://www.instagram.com/dr.sepideh.atashi" target="_blank">اینستاگرام دکتر</a></p>
         </div>
     </section>
 
-    <!-- CONSULT SECTION -->
+
+    <!-- CONSULT -->
     <section id="consult" class="section fade">
         <h2 class="section-title">مشاوره آنلاین</h2>
-        <p style="text-align:center; font-size:18px;">
-            برای دریافت مشاوره اولیه، لطفاً از طریق تماس تلفنی یا دایرکت اینستاگرام پیام ارسال کنید.
+        <p style="text-align:center;">
+            جهت دریافت مشاوره اولیه یا ارسال عکس قبل از مراجعه حضوری، لطفاً از طریق تماس تلفنی یا دایرکت اینستاگرام پیام ارسال کنید.
         </p>
     </section>
 
+
+    <!-- SCROLL TO TOP -->
     <button id="scrollTopBtn">⬆</button>
 
+
+    <!-- FOOTER -->
     <footer>
         © 2025 | تمامی حقوق متعلق به دکتر سپیده آتشی است.
     </footer>
